--- a/package.json
+++ b/package.json
@@ -1,27 +1,37 @@
 {
-  "name": "ayoub",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.1"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.1",
-    "@eslint/eslintrc": "^3"
-  }
+    "name": "ayoub",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "echo \"\u001b[32mStarting Development Server...\u001b[0m\" && next dev --turbopack",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "eslint-plugin-react-hooks": "^5.2.0",
+        "motion": "^12.9.2",
+        "next": "15.3.1",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
+        "lucide-react": "^0.471.2"
+    },
+    "devDependencies": {
+        "@eslint/eslintrc": "^3",
+        "@tailwindcss/postcss": "^4",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "eslint": "^9",
+        "eslint-config-next": "15.3.1",
+        "postcss": "^8.4.35",
+        "tailwindcss": "^3.4.1",
+        "typescript-eslint": "^8.3.0",
+        "typescript": "^5"
+    },
+    "pnpm": {
+        "onlyBuiltDependencies": [
+            "sharp"
+        ]
+    }
 }
