--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     },
     "dependencies": {
         "eslint-plugin-react-hooks": "^5.2.0",
+        "lucide-react": "^0.471.2",
         "motion": "^12.9.2",
         "next": "15.3.1",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
-        "lucide-react": "^0.471.2"
+        "resend": "^4.4.1"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
@@ -26,8 +27,8 @@
         "eslint-config-next": "15.3.1",
         "postcss": "^8.4.35",
         "tailwindcss": "^3.4.1",
-        "typescript-eslint": "^8.3.0",
-        "typescript": "^5"
+        "typescript": "^5",
+        "typescript-eslint": "^8.3.0"
     },
     "pnpm": {
         "onlyBuiltDependencies": [
