--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
         "lucide-react": "^0.471.2",
         "motion": "^12.9.2",
         "next": "15.3.1",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0",
         "resend": "^4.4.1"
     },
     "devDependencies": {
-        "@eslint/eslintrc": "^3",
-        "@tailwindcss/postcss": "^4",
-        "@types/node": "^20",
-        "@types/react": "^19",
-        "@types/react-dom": "^19",
-        "eslint": "^9",
+        "@eslint/eslintrc": "^3.3.1",
+        "@next/eslint-plugin-next": "^15.3.1",
+        "@tailwindcss/postcss": "^4.1.4",
+        "@types/node": "^20.17.32",
+        "@types/react": "^19.1.2",
+        "@types/react-dom": "^19.1.2",
+        "eslint": "^9.25.1",
         "eslint-config-next": "15.3.1",
-        "postcss": "^8.4.35",
-        "tailwindcss": "^3.4.1",
-        "typescript": "^5",
-        "typescript-eslint": "^8.3.0"
+        "tailwindcss": "^4.1.4",
+        "typescript": "^5.8.3",
+        "typescript-eslint": "^8.31.0"
     },
     "pnpm": {
         "onlyBuiltDependencies": [
