--- a/package.json
+++ b/package.json
@@ -1,38 +1,65 @@
 {
-    "name": "ayoub",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "echo \"\u001b[32mStarting Development Server...\u001b[0m\" && next dev --turbopack",
-        "build": "next build",
-        "start": "next start",
-        "lint": "next lint"
-    },
-    "dependencies": {
-        "eslint-plugin-react-hooks": "^5.2.0",
-        "lucide-react": "^0.471.2",
-        "motion": "^12.9.2",
-        "next": "15.3.1",
-        "react": "^19.1.0",
-        "react-dom": "^19.1.0",
-        "resend": "^4.4.1"
-    },
-    "devDependencies": {
-        "@eslint/eslintrc": "^3.3.1",
-        "@next/eslint-plugin-next": "^15.3.1",
-        "@tailwindcss/postcss": "^4.1.4",
-        "@types/node": "^20.17.32",
-        "@types/react": "^19.1.2",
-        "@types/react-dom": "^19.1.2",
-        "eslint": "^9.25.1",
-        "eslint-config-next": "15.3.1",
-        "tailwindcss": "^4.1.4",
-        "typescript": "^5.8.3",
-        "typescript-eslint": "^8.31.0"
-    },
-    "pnpm": {
-        "onlyBuiltDependencies": [
-            "sharp"
-        ]
-    }
+  "name": "ayoub-portfolio",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "build": "next build",
+    "check": "next lint && tsc --noEmit",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "dev": "next dev --turbo",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
+    "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "preview": "next build && next start",
+    "start": "next start",
+    "typecheck": "tsc --noEmit"
+  },
+  "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@next/eslint-plugin-next": "^15.3.2",
+    "@next/mdx": "^15.3.2",
+    "@t3-oss/env-nextjs": "^0.12.0",
+    "@tanstack/react-query": "^5.69.0",
+    "@trpc/client": "^11.0.0",
+    "@trpc/react-query": "^11.0.0",
+    "@trpc/server": "^11.0.0",
+    "drizzle-orm": "^0.41.0",
+    "eslint-plugin-next": "^0.0.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "lucide-react": "^0.511.0",
+    "motion": "^12.15.0",
+    "next": "^15.2.3",
+    "postgres": "^3.4.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "server-only": "^0.0.1",
+    "superjson": "^2.2.1",
+    "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.0.15",
+    "@types/node": "^20.14.10",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "drizzle-kit": "^0.30.5",
+    "eslint": "^9.23.0",
+    "eslint-config-next": "^15.2.3",
+    "eslint-plugin-drizzle": "^0.2.3",
+    "postcss": "^8.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "tailwindcss": "^4.0.15",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.27.0"
+  },
+  "ct3aMetadata": {
+    "initVersion": "7.39.3"
+  },
+  "packageManager": "pnpm@10.9.0"
 }
